# carina

./: Dockerfile  catalog-info.yaml  pyproject.toml
.github/workflows/: test-deploy.yaml
carina/: __init__.py
carina/routes/: healthcheck.py
kubernetes/production/: deployment.yaml
tests/routes/: test_healthcheck.py
