[tool.poetry]
name = "carina"
version = "0.1.0"
description = ""
authors = ["Unicarioca TCC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[tool.poetry.group.test.dependencies]
httpx = "^0.26.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
